refactor: update collaboration copy to connection
