# src/user-lists/dtos/connections.dto.ts
@@ -2,7 +2,7 @@ import { ApiProperty } from "@nestjs/swagger";
 import { Type } from "class-transformer";
 import { IsArray } from "class-validator";
 
-export class CollaboratorsDto {
+export class ConnectionsDto {
   @ApiProperty({
     description: "An array of contributor user IDs",
     isArray: true,
